2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvassd/attack.c (attack_network): Replaced harglist by GHashTable.

	* openvassd/save_tests.c (save_tests_playback,
	save_tests_setup_playback): Replaced harglst by GHashTable.

	* openvassd/save_tests.h (save_tests_playback): Changed signature, take
	GHashTable instead of harglst.

2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvassd/otp_1_0.c: Minor cosmetics.

2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvassd/otp_1_0.c: Adjusted includes.
	(otp_1_0_server_send_certificates): Switch from
	openvas-libraries/base/openvas_certificate to
	openvas-libraries/base/certificate.

2009-09-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* configure.in: Consider recent name change from libopenvasmisc
	to libopenvas_misc. Also, libnasl is not separate anymore.

	* openvas.tmpl.in: Removed LIBNASL specific elements.

	* configure: Updated.

2009-09-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post-release version bump.

	* VERSION: Set to 3.0.0.beta2.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-09-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-scanner 3.0.0-beta1 release.

	* VERSION: Set to 3.0.0.beta1

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.

2009-09-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* MANIFEST: Added missing file.

2009-09-23  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvassd/openvasd.c: (re)moved.

	* openvassd/openvassd.c: Moved from openvassd/openvasd.c.

	* openvasd/Makefile, MANIFEST: Adjusted.

	* openvassd/attack.c, openvassd/parser.c, openvassd/pluginlaunch.c,
	openvassd/processes.c: Adjusted comments.

	* doc/Doxyfile, doc/Doxyfile_full: Adjusted paths.

	* doc/session_saving.txt, doc/openvas-mkcert-client.1: Adjusted

2009-09-23  Felix Wolfsteller <felix.wolfsteller@intevation.de>