@@ -1,5 +1,11 @@
 2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>
 
+	* openvassd/attack.c, openvassd/openvassd.c, openvassd/preferences.c:
+	Adjusted includes (openvas-libraries/hg headers get installed to
+	openvas/hg now.)
+
+2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>
+
 	* openvassd/attack.c (attack_network): Replaced harglist by GHashTable.
 
 	* openvassd/save_tests.c (save_tests_playback,
